--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,16 +4,18 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+apply plugin: 'kotlin-kapt'
+
 apply plugin: 'io.fabric'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 28
     defaultConfig {
         applicationId "ua.dev.krava.speedtest"
         minSdkVersion 21
-        targetSdkVersion 27
-        versionCode 5
-        versionName "1.1.0"
+        targetSdkVersion 28
+        versionCode 8
+        versionName "1.6.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -38,12 +40,16 @@ android {
             buildConfigField("String", "IP_INFO_URL", "\"http://ip-api.com/json\"")
         }
     }
+    configurations.all {
+        resolutionStrategy.force "com.android.support:support-media-compat:$support_version"
+        resolutionStrategy.force "com.android.support:support-v4:$support_version"
+    }
 }
 
 dependencies {
-    compile project(':speedometer')
+    implementation project(':speedometer')
 
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "com.android.support:appcompat-v7:$support_version"
     implementation "com.android.support:design:$support_version"
     implementation "com.android.support.constraint:constraint-layout:$constraint_layout_version"
@@ -64,6 +70,7 @@ dependencies {
     kapt "com.arello-mobile:moxy-compiler:$moxy_version"
 
     implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
+    implementation "com.squareup.okhttp3:logging-interceptor:$okhttp_version"
 
     implementation "io.reactivex.rxjava2:rxandroid:$rxandroid_version"
     implementation "io.reactivex.rxjava2:rxjava:$rxjava_version"
@@ -71,11 +78,11 @@ dependencies {
     implementation('com.crashlytics.sdk.android:crashlytics:2.7.1@aar') {
         transitive = true
     }
-    implementation 'com.google.firebase:firebase-core:11.8.0'
+    implementation 'com.google.firebase:firebase-core:16.0.4'
 
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
 
 kapt {
